--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-﻿!.gitignore	#不忽略.gitignore文件
-
-build/    # 忽略 build/ 目录下的所有文件
-
-bin/    # 忽略 bin/ 目录下的所有文件
-
-lib/    # 忽略 lib/ 目录下的所有文件
-
-target/
+﻿# 忽略 build/ 目录下的所有文件
+/build/ 
+# 忽略 bin/ 目录下的所有文件
+/bin/
+# 忽略 lib/ 目录下的所有文件 
+/lib/
+/target/
