--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
 			<version>2.8.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.truth0</groupId>
+			<artifactId>truth</artifactId>
+			<version>0.23</version>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
