--- a/pom.xml
+++ b/pom.xml
@@ -39,9 +39,29 @@
 			<version>2.8.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.truth0</groupId>
+			<artifactId>truth</artifactId>
+			<version>0.23</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.8</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 		</dependency>
+		        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.3</version>
+        </dependency>
 	</dependencies>
 </project>
